# exercism

c/: .gitignore  run-all.sh
c/acronym/: CMakeLists.txt
c/acronym/src/: acronym.c
c/beer-song/: CMakeLists.txt
c/beer-song/src/: beer_song.c  beer_song.h
c/binary-search/: CMakeLists.txt
c/binary-search/src/: binary_search.c  binary_search.h
c/binary-search/test/: test_binary_search.c
c/bob/: CMakeLists.txt
c/bob/src/: bob.c  bob.h
c/bob/test/: test_bob.c
c/bracket-push/: CMakeLists.txt
c/bracket-push/src/: bracket_push.c  bracket_push.h
c/complex-numbers/: CMakeLists.txt
c/complex-numbers/src/: complex_numbers.c
c/complex-numbers/test/: test_complex_numbers.c
c/difference-of-squares/: CMakeLists.txt
c/difference-of-squares/src/: difference_of_squares.c  difference_of_squares.h
c/difference-of-squares/test/: test_difference_of_squares.c
c/gigasecond/: CMakeLists.txt
c/gigasecond/src/: gigasecond.c  gigasecond.h
c/grains/: CMakeLists.txt  makefile
c/grains/src/: grains.c  grains.h
c/hamming/: CMakeLists.txt
c/hamming/src/: hamming.c  hamming.h
c/hamming/test/: test_hamming.c
c/hello-world/: tests.out
c/isogram/: CMakeLists.txt
c/leap/: CMakeLists.txt
c/leap/src/: leap.c  (+1 more)
c/meetup/: CMakeLists.txt
c/nucleotide-count/: CMakeLists.txt
c/pangram/: CMakeLists.txt
c/pig-latin/: CMakeLists.txt
c/raindrops/: CMakeLists.txt
c/raindrops/src/: raindrops.c  raindrops.h
c/rna-transcription/: CMakeLists.txt
c/rna-transcription/src/: rna_transcription.c  rna_transcription.h
c/secret-handshake/: CMakeLists.txt
c/space-age/: CMakeLists.txt
c/sum-of-multiples/: CMakeLists.txt
c/two-fer/: CMakeLists.txt
c/two-fer/src/: two_fer.c  two_fer.h
c/word-count/: CMakeLists.txt
c/wordy/: CMakeLists.txt
c/wordy/src/: wordy.c  wordy.h
c/wordy/test/: test_wordy.c
elixir/bob/: bob.exs
elixir/rna-transcription/: rna_transcription.exs
elixir/word-count/: word_count.exs
reasonml/: .gitignore
ruby/acronym/: acronym.rb
ruby/high-scores/: high_scores.rb
ruby/resistor-color-duo/: resistor_color_duo.rb
(+23 files in other folders)
